# cs4240-projects

./: .gitignore  benchmark.sh  cabal.project  design.MD  divisible.s  prime.s  project1.cabal  run.sh  run_testcases.py  sample.txt  testcase_helper.sh  tester.py  testsuit.py
app/: app.cabal
app/src/: Main.hs
programs/: README.md  basic.ir  divisible.ir  factorial.ir  reference_1  sqrt.ir  test_program  test_program2  test_program3
programs/bug-fixes/: missed_reach.ir
programs/fuzz_tests/: fuzz13.ir  fuzz17.ir  fuzz18.ir  fuzz19.ir  fuzz21.ir  fuzz22.ir  fuzz24.ir  fuzz28.ir  fuzz30.ir  fuzz36.ir  fuzz41.ir  fuzz43.ir  fuzz44.ir  fuzz46.ir  fuzz50.ir  fuzz54.ir  fuzz59.ir  fuzz60.ir  fuzz61.ir  fuzz64.ir  fuzz65.ir  fuzz7.ir  fuzz72.ir  fuzz73.ir  fuzz74.ir  fuzz75.ir  fuzz77.ir  fuzz8.ir  fuzz9.ir
programs/fuzzed/: test1  test_med1  test_med2  test_med3  test_med4  test_med6
programs/fuzzed2/: test02  test03  test04  test15  test16  test20  test27  test32  test37  test41  test47  test48  test50  test58  test63  test69  test77  test78  test87
programs/fuzzed3/: test10  test3  test4  test6  test8  test9
programs/fuzzed4/: test25  test42  test43  test46  test8
programs/mips_test/: arr.ir  array_handling.ir  divisible.ir  test1.ir
programs/project2/instructions/: binops.ir  test_sbrk.ir
programs/project2_public/: prime.ir
project1/: project1.cabal  test1  test2  test3
project1/src/Fuzz/: Test.hs
project1/src/IR/: Function.hs  Instruction.hs  InstructionShim.hs  Printer.hs  Program.hs  Reader.hs  Selection_old.hs  Type.hs
project1/src/IR/Optimizer/: CFG.hs  MarkSweep.hs  ReachingDefs.hs
project1/src/Optimizer/: CFG.hs  MarkSweep.hs  ReachingDefs.hs
project2/: TODO.md  liveness_algo.txt  project2.cabal
project2/src/: Main.hs
project2/src/Fuzz/: Test.hs
project2/src/IR/: Instruction.hs  Selection.hs  Selection_old.hs
project2/src/MIPS/: Backend.hs  CallingConvention.hs  Intrinsics.hs  Printer.hs  Selection.hs  StackAllocation.hs
project2/src/MIPS/Liveness/: Liveness.hs  MipsCFG.hs
project2/src/MIPS/RegisterAllocator/: Allocation.hs  CallingConvention.hs  Greedy.hs  Naive.hs
project2/src/MIPS/RegisterAllocator/Greedy/: Graph.hs  MipsCFG.hs
project2/src/MIPS/RegisterAllocator/Monad/: Class.hs  GreedyM.hs  NaiveM.hs
project2/src/MIPS/Types/: Operand.hs  Operands.hs  Physical.hs  Virtual.hs
project2/src/TigerIR/: IrInstruction.hs  LabelRewriter.hs  Program.hs  Reader_attempt1.hs  Types.hs
project2/src/TigerIR/Parser/: Reader.hs
project2/src/TigerIR/Parser/Legacy/: Type.hs
src/IR/: Function.hs  Instruction.hs  Program.hs  Reader.hs  Type.hs
src/IR/Optimizer/: CFG.hs  MarkSweep.hs  ReachingDefs.hs
testcases/binops/: binop_template.py
testcases/branch/: branch_template.py
tiger-ir/: tiger-ir.cabal
tiger-ir/src/TigerIR/: IrInstruction.hs  Program.hs  Types.hs  VarType.hs  Variable.hs
tiger-ir/src/TigerIR/Parser/: Reader.hs
tiger-ir/src/TigerIR/Parser/Legacy/: Function.hs  Instruction.hs  Program.hs  Shim.hs
