cabal-version:      2.4
name:               project1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ethan Kiang, Luke Kim
maintainer:         tszhang.kiang@gatech.edu, wkim330@gatech.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable project1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
  exposed-modules:
    IR.Function
    IR.Instruction
    IR.Program
    IR.Type
    IR.Reader
    IR.Printer
    IR.Optimizer.MarkSweep
  hs-source-dirs: src
  build-depends: base ^>=4.14.3.0
                 , parsec ^>=3.1.15.0
                 , containers ^>=0.6.5.1
  default-language: Haskell2010
