cabal-version: 2.4
name: project2-app
version: 0.1.0.0

executable project2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                      , project2
                      , containers
    hs-source-dirs:   src
    default-language: Haskell2010