cabal-version:      2.4
name:               project1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ethan Kiang, Luke Kim
maintainer:         tszhang.kiang@gatech.edu, wkim330@gatech.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library
  exposed-modules:
    IR.Function
    IR.Instruction
    IR.InstructionShim
    IR.Program
    IR.Type
    IR.Reader
    IR.Printer
    Fuzz.Test
    Optimizer.MarkSweep
    Optimizer.ReachingDefs
    Optimizer.CFG
  hs-source-dirs: src
  build-depends: base ^>=4.14.3.0
                 , tiger-ir
                 , parsec ^>=3.1.15.0
                 , containers ^>=0.6.5.1
                 , vector ^>=0.12.3.1
                 , mtl ^>=2.2.2
                 , QuickCheck ^>=2.14.2
  default-language: Haskell2010
