cabal-version:      2.4
name:               project2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ethan Kiang, Luke Kim
maintainer:         tszhang.kiang@gatech.edu, wkim330@gatech.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library
  exposed-modules:
    MIPS.RegisterAllocator.Naive
    MIPS.Types.Operand
    MIPS.Types.Physical
    MIPS.Types.Virtual
    MIPS.CallingConvention
    MIPS.Printer
    MIPS.Selection
    TigerIR.IrInstruction
    TigerIR.Program 
    TigerIR.Types 
    TigerIR.Parser.Reader
  hs-source-dirs: src
  build-depends: base ^>=4.14.3.0
                 , parsec ^>=3.1.15.0
                 , containers ^>=0.6.5.1
                 , vector ^>=0.12.3.1
                 , mtl ^>=2.2.2
                 , QuickCheck ^>=2.14.2
                 , lens
  default-language: Haskell2010
