cabal-version:      2.4
name:               project2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ethan Kiang, Luke Kim
maintainer:         tszhang.kiang@gatech.edu, wkim330@gatech.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable backend
  main-is: Main.hs
  
  other-modules:
        MIPS.Backend
        MIPS.CallingConvention
        MIPS.Intrinsics
        MIPS.Printer
        MIPS.RegisterAllocator.Naive
        MIPS.Selection
        MIPS.Types.Operand
        MIPS.Types.Physical
        MIPS.Types.Virtual
        TigerIR.IrInstruction
        TigerIR.Parser.Legacy.Function
        TigerIR.Parser.Legacy.Instruction
        TigerIR.Parser.Legacy.Program
        TigerIR.Parser.Legacy.Shim
        TigerIR.Parser.Legacy.Type
        TigerIR.Parser.Reader
        TigerIR.Program
        TigerIR.Types

  build-depends: base ^>=4.14.3.0
                 , containers ^>=0.6.5.1
                 , parsec ^>=3.1.15.0
                 , vector ^>=0.12.3.1
                 , mtl ^>=2.2.2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fwarn-incomplete-patterns -Werror

library
  exposed-modules:
    TigerIR.Parser.Reader
    MIPS.Backend
  other-modules:
    TigerIR.Parser.Legacy.Function
    TigerIR.Parser.Legacy.Instruction
    TigerIR.Parser.Legacy.Program
    TigerIR.Parser.Legacy.Shim
    TigerIR.Parser.Legacy.Type
    MIPS.RegisterAllocator.Naive
    TigerIR.IrInstruction
    TigerIR.Program 
    TigerIR.Types 
    MIPS.Types.Operand
    MIPS.Types.Physical
    MIPS.Types.Virtual
    MIPS.CallingConvention
    MIPS.Intrinsics
    MIPS.Printer
    MIPS.Selection
    MIPS.Liveness.MipsCFG
  hs-source-dirs: src
  build-depends: base ^>=4.14.3.0
                 , parsec ^>=3.1.15.0
                 , containers ^>=0.6.5.1
                 , vector ^>=0.12.3.1
                 , mtl ^>=2.2.2
                 , QuickCheck ^>=2.14.2
  default-language: Haskell2010
  ghc-options: -fwarn-incomplete-patterns -Werror